# mvPolynomial

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  README.md  vcpkg.json
.github/workflows/: pre_commit.yml  test.yml
include/multivar_polynomial/: index_comparer.hpp  multivar_polynomial.hpp  polynomial.hpp  polynomial_product.hpp  type.hpp
include/mvPolynomial/: expression.hpp  index_comparer.hpp  multivar_polynomial.hpp  mvPolynomial.hpp  polynomial.hpp  polynomial_product.hpp  type.hpp
include/mvpolynomial/: multivar_polynomial.hpp  type.hpp
test/: CMakeLists.txt  multivar_polynomial_test.cpp  mvPolynomial_test.cpp  polynomial_product_test.cpp  polynomial_test.cpp
